@@ -4,6 +4,10 @@ Revision history for Path-Class-Rule
 
 0.004     2011-09-14 06:48:13 America/New_York
 
+  [NEW FEATURES]
+
+  - Added 'skip' logic method for easy custom pruning
+
   [DOCUMENTATION]
 
     - Added additional modules to SEE ALSO commentary
